--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,14 @@ a {
   font-weight: 700;
 }
 
+h1 {
+  font-size: 3.8rem;
+  font-weight: 700;
+}
+
 h2 {
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 1rem;
 }
 
 h3 {
@@ -22,4 +26,10 @@ h3 {
 
 h4 {
   font-weight: 600;
+  font-size: 1.2rem;
+}
+
+p {
+  font-size: 1.2rem;
+  font-weight: 400;
 }
