--- a/src/index.css
+++ b/src/index.css
@@ -56,10 +56,10 @@ p {
   color: var(--color-text-title);
 }
 
-span {
+/* span {
   font-weight: 300;
   color: var(--color-text-span);
-}
+} */
 
 a {
   text-decoration: none;
@@ -69,7 +69,7 @@ ul {
   list-style: none;
 }
 
-select {
+/* select {
   padding-block: 0.8rem;
   padding-inline: 1rem;
   border: 1px solid var(--color-gray-2);
@@ -89,7 +89,7 @@ input {
   border-radius: 10px;
   height: 100%;
   width: 40%;
-}
+} */
 
 /* a {
   text-decoration: none;
@@ -141,7 +141,7 @@ p {
 }
 
 /* Tabs */
-.react-tabs__tab {
+/* .react-tabs__tab {
   transition: all 0.3s ease-in-out;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
@@ -157,17 +157,25 @@ p {
   background-color: var(--color-blue);
   color: var(--color-white);
   border: transparent;
-}
+} */
 
 /* Date Time Picker */
-.react-time-picker__wrapper {
+/* .react-time-picker__wrapper {
   border: 1px solid var(--color-gray-2) !important;
   border-radius: 10px !important;
   padding-block: 0.5rem;
   padding-inline: 1rem;
-}
+} */
 
 /* React Calendar */
-.react-calendar {
+/* .react-calendar {
   width: 100% !important;
+} */
+
+.MuiDataGrid-cell:focus {
+  outline: none !important;
+}
+
+.MuiDataGrid-cell:focus-within {
+  outline: none !important;
 }
