--- a/src/layout/LayoutDashboard.module.css
+++ b/src/layout/LayoutDashboard.module.css
@@ -1,11 +1,25 @@
 .dashboard_container {
   display: flex;
   background-color: var(--color-gray);
-  width: 100vw;
+  /* background-color: #f9fafb; */
+  width: 100%;
   height: 100vh;
-  overflow: hidden;
-  column-gap: 1rem;
+  overflow: auto;
+  /* column-gap: 1rem; */
 }
+
+@media (min-width: 768px) {
+  .dashboard_container {
+    column-gap: 1rem;
+  }
+}
+
+/* @media (max-width: 768px) {
+  .dashboard_container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+} */
 
 .dashboard_content {
   padding-block: 1rem;
