--- a/src/layout/LayoutDashboardContent.module.css
+++ b/src/layout/LayoutDashboardContent.module.css
@@ -1,35 +1,24 @@
-.database {
-  background-color: transparent;
-  border-radius: 10px;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.5rem;
-  height: 100%;
-  width: 95%;
-  position: relative;
-  /* border: 1px solid var(--color-gray-2); */
-  overflow: hidden;
-  overflow-y: auto;
-}
-
-.database h1 {
-  color: var(--color-purple);
-}
-
-.database hr {
-  border: 0.5px solid var(--color-gray-2);
-}
-
 .content {
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
-  height: 100%;
 }
 
 .dashboard_content {
   padding-block: 1rem;
   padding-inline: 1rem;
   width: 100%;
+  height: 100%;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 1200px) {
+  .dashboard_content {
+    margin-top: 2rem;
+  }
+}
+
+.dashboard_content hr {
+  border: 0.5px solid var(--color-gray-2);
+  margin-block: 1rem;
 }
