--- a/src/layout/LayoutDashboard.module.css
+++ b/src/layout/LayoutDashboard.module.css
@@ -4,7 +4,7 @@
   /* background-color: #f9fafb; */
   width: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow: hidden;
   /* column-gap: 1rem; */
 }
 
