--- a/src/layout/LayoutDashboardContent.module.css
+++ b/src/layout/LayoutDashboardContent.module.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
+  height: 100%;
+  overflow-y: auto;
+  padding-bottom: 6rem;
+  padding-right: 1rem;
 }
 
 .dashboard_content {
@@ -9,7 +13,8 @@
   padding-inline: 1rem;
   width: 100%;
   height: 100%;
-  margin-bottom: 1rem;
+  overflow-y: hidden;
+  /* margin-bottom: 1rem; */
 }
 
 @media (max-width: 1200px) {
