--- a/src/pages/main/Home.module.css
+++ b/src/pages/main/Home.module.css
@@ -1,15 +1,13 @@
-
-
 /*LANDINGPAGE*/
-.fondo1{
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    width: 100%;
+.fondo1 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  width: 100%;
 }
 
-.fondo2{
+.fondo2 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -22,7 +20,7 @@
   top: 12%;
   left: 12%;
   transform: translate(-50%, -50%);
-  }
+}
 
 .bot {
   position: absolute;
@@ -31,7 +29,7 @@
   transform: translate(-50%, -50%);
   width: 150px;
   cursor: pointer;
-  }
+}
 
 .text1 {
   position: absolute;
@@ -39,7 +37,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 45px;
-  color: #59D5F0;
+  color: #59d5f0;
 }
 
 .text2 {
@@ -48,7 +46,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 45px;
-  color: #35579A;
+  color: #35579a;
 }
 
 .text3 {
@@ -57,7 +55,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 30px;
-  color: #5A8BE9;
+  color: #5a8be9;
 }
 
 .text4 {
@@ -66,7 +64,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 30px;
-  color: #5A8BE9;
+  color: #5a8be9;
 }
 
 .text5 {
@@ -75,7 +73,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 50px;
-  color: #59D5F0;
+  color: #59d5f0;
 }
 
 .text6 {
@@ -84,7 +82,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 50px;
-  color: #35579A;
+  color: #35579a;
 }
 
 .branding {
@@ -199,7 +197,7 @@
   transform: translate(-50%, -50%);
 }
 
-.b{
+.b {
   position: absolute;
   top: 270%;
   left: 85%;
@@ -240,126 +238,73 @@ section {
   scroll-snap-align: start; /* Alinea cada sección al inicio de la vista */
 }
 
-
-
-
-/* CHATBOT PRINCIPAL
-.chatbot{
-  position: fixed;
-  right: 40px;
-  bottom: 40px;
-  width: 420px;
-  overflow: hidden;
-  background: #EEEEEE;
-  border-radius: 10px;
-  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
-              0 32px 64px -48px rgba(0,0,0,0.5);
-}
-
-.chatbot header{
-  display: flex;
-  flex-direction: row;
-  background: #17C3CE;
-}
-
-.h2s{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.chatbot header h2 {
-  font-size: 13px;
-  color: #fff;
-  padding: 10px 0 0 5px;
-} 
-
-.chatbot header img{
-  width: 83px;
-  height: 80px;
-}
-
-.chatbot .chatbox{
-  height: 510px;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  row-gap: 30px;
-}
-
-.minibot2{
+.minibot2 {
   margin-top: 20px;
   margin-left: 20px;
   width: 20px;
   height: 20px;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   padding: 1%;
   border-radius: 4px;
 }
 
-.chatincoming{
+.chatincoming {
   display: flex;
 }
 
-.texto{
-  margin-top: 30px;
+.texto {
+  margin-top: 25px;
   margin-left: 10px;
   padding: 12px 16px;
   border-radius: 0 10px 10px 10px;
-  background: #D9D9D9;
+  background: #d9d9d9;
   font-size: 12px;
-  width: 50%;
+  max-width: 65%;
 }
 .chatoutgoing {
   display: flex;
   flex-direction: column;
   row-gap: 5px;
   align-items: flex-end;
+  margin-top: 1rem;
 }
 
-
-.chatoutgoing p{
+.chatoutgoing li {
   margin-right: 20px;
   padding: 12px 16px;
   border-radius: 10px 10px 0 10px;
-  background: #AEE9ED;
+  background: #aee9ed;
   font-size: 12px;
   cursor: pointer;
 }
 
-.linea{
-  margin-top: 80px;
+.chatoutgoing_response {
+  margin-right: 20px;
+  padding: 12px 16px;
+  border-radius: 10px 10px 0 10px;
+  background: #aee9ed;
+  font-size: 12px;
 }
 
-.barras{
-  width: 30px;
-  height: 30px;
-  margin-left: 20px;
-  margin-top: 15px;
-  cursor: pointer;
-} */
-
-
 /*CHATBOT LENGUAJE*/
-.chatbot{
+.chatbot {
   position: fixed;
   right: 40px;
   bottom: 40px;
   width: 420px;
-  overflow: hidden;
-  background: #EEEEEE;
+  background: #eeeeee;
   border-radius: 10px;
-  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
-              0 32px 64px -48px rgba(0,0,0,0.5);
+  box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
+    0 32px 64px -48px rgba(0, 0, 0, 0.5);
 }
 
-.chatbot header{
+.chatbot header {
   display: flex;
   flex-direction: row;
-  background: #17C3CE;
+  background: #17c3ce;
 }
 
-.h2s{
+.h2s {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -369,30 +314,39 @@ section {
   font-size: 13px;
   color: #fff;
   padding: 10px 0 0 5px;
-} 
+}
 
-.chatbot header img{
+.chatbot header img {
   width: 83px;
   height: 80px;
 }
 
-.chatbot .chatbox{
-  height: 510px;
+.chatbot .chatbox {
+  height: 500px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
+  padding-bottom: 5rem;
 }
 
-
-.chatincoming{
+.chatincoming {
   display: flex;
 }
 
-.texto{
+.texto1 {
   font-size: 13px;
   margin-left: 20%;
   margin-top: 20%;
+}
+.chatbox {
+  display: flex;
+  row-gap: 1rem;
+}
+.text_select_lang {
+  font-size: 13px;
+  margin-top: 6rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 .idiomas {
   margin-left: 25%;
@@ -403,75 +357,76 @@ section {
   flex-direction: column;
   row-gap: 5px;
   align-items: center;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
-.linea2{
-  height: 50%;
-}
-
-.chatoutgoing p{
-  margin-right: 20px;
-  padding: 12px 16px;
-  border-radius: 10px 10px 0 10px;
-  background: #AEE9ED;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-.linea{
-  margin-top: 50px;
-}
-
-.guardar{
-  background-color: #17C3CE;
-  margin-top: 30%;
+.guardar {
+  background-color: #17c3ce;
+  margin-top: 20%;
   margin-left: 10%;
   margin-right: 10%;
-  padding-left: 13%;
+  text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
   border-radius: 10px;
 }
 
-.guardar p{
+.guardar p {
   color: white;
   font-size: 18px;
   cursor: pointer;
 }
-
-.barras{
-  width: 30px;
-  height: 30px;
-  margin-left: 20px;
-  margin-top: 10px;
-  cursor: pointer;
+.linea {
+  margin-top: 50px;
 }
 
-.lenguaje{
+.barras {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.linea2 {
+  margin-top: 80px;
+}
+.footer_area {
+  position: absolute;
+  border-top: 2px solid #d8d8d8;
+  padding-bottom: 0.8rem;
+  padding-left: 0.8rem;
+  padding-top: 0.8rem;
+  bottom: 0;
+  width: 100%;
+  background: #eeeeee;
+}
+.lenguaje {
   display: flex;
   flex-direction: row;
   cursor: pointer;
 }
-.lenguaje .bandera{
+.lenguaje .bandera {
   padding-left: 10px;
 }
-.español{
+.español {
   padding-left: 18px;
 }
-.arabe{
+.arabe {
   padding-left: 33px;
 }
-.ruso{
+.ruso {
   padding-left: 38px;
 }
-.frances{
+.frances {
   padding-left: 17px;
 }
-.flechabajo{
+.flechabajo {
   height: 13px;
   padding-left: 65px;
   padding-top: 5px;
 }
-.ingles{
+.ingles {
   padding-left: 70px;
+}
+
+.bandera {
+  width: 1.5rem;
+  height: 1.5rem;
 }
