complete to 98% cap 1, add form to cap 2

--- a/src/pages/main/Home.module.css
+++ b/src/pages/main/Home.module.css
@@ -239,17 +239,12 @@ section {
 }
 
 .minibot2 {
-  margin-top: 20px;
+  margin-top: 15px;
   margin-left: 20px;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   background-color: #e5e5e5;
-  padding: 1%;
   border-radius: 4px;
-}
-
-.chatincoming {
-  display: flex;
 }
 
 .texto {
@@ -266,6 +261,7 @@ section {
   flex-direction: column;
   row-gap: 5px;
   align-items: flex-end;
+  margin-left: 7rem;
   margin-top: 1rem;
 }
 
@@ -289,8 +285,9 @@ section {
 /*CHATBOT LENGUAJE*/
 .chatbot {
   position: absolute;
-  overflow: auto;
-  width: 25rem;
+
+  width: 26rem;
+  height: 38rem;
   right: 2rem;
   top: 30.5rem;
   background: #eeeeee;
@@ -325,7 +322,7 @@ section {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  padding-bottom: 5rem;
+  padding-bottom: 3.1rem;
 }
 
 .chatincoming {
@@ -337,10 +334,7 @@ section {
   margin-left: 20%;
   margin-top: 20%;
 }
-.chatbox {
-  display: flex;
-  row-gap: 1rem;
-}
+
 .text_select_lang {
   font-size: 13px;
   margin-top: 6rem;
@@ -358,9 +352,14 @@ section {
   align-items: center;
   background-color: #d9d9d9;
 }
+.container_button {
+  display: flex;
+  margin-top: 2rem;
+  flex-direction: column;
+  row-gap: 2rem;
+}
 .guardar {
   background-color: #17c3ce;
-  margin-top: 20%;
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
@@ -371,8 +370,9 @@ section {
 
 .guardar p {
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   cursor: pointer;
+  padding: 0.3rem;
 }
 .linea {
   margin-top: 50px;
@@ -451,5 +451,42 @@ section {
   height: 9rem;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.modal_button {
+  background-color: #17c3ce;
+  border-radius: 0.5rem;
+  width: 8rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text_button_modal {
+  color: white;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+
+/* FORM */
+.form_container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.4rem;
+  padding: 2rem 3rem 0rem 2rem;
+  align-items: center;
+}
+.form_tittle {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.btn_container {
+  display: flex;
+  column-gap: 1rem;
+  width: 100%;
   justify-content: center;
 }
